[project]
name = "ai-monitor"
version = "1.0.0"
description = "High-performance AI Workstation Monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "nvidia-ml-py>=13.590.44;sys_platform == 'linux' or sys_platform == 'win32'",
    "psutil>=7.2.1",
]
